assets/css/animate.css
@media (min-width: 768px) {
  .animate .svg-1 #bulb-ray-1 {
    opacity: 0;
    transition: 0.1s; }
  .animate .svg-1 #bulb-ray-2 {
    opacity: 0;
    transition: 0.1s; }
  .animate .svg-1 #bulb-ray-3 {
    opacity: 0;
    transition: 0.1s; }
  .animate .svg-1 #jigsaw-red {
    transform-box: fill-box;
    transform-origin: top left;
    transform: rotate(21.5deg) translateX(23px);
    transform: translateX(0) rotate(0deg);
    transition: 0.6s; }
  .animate .svg-1:hover #calendar #b-square-1 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black 0.2s ease; }
  .animate .svg-1:hover #calendar #b-square-2 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black 0.2s ease 0.1s; }
  .animate .svg-1:hover #calendar #b-square-3 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black 0.2s ease 0.2s; }
  .animate .svg-1:hover #calendar #b-square-4 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black 0.2s ease 0.3s; }
  .animate .svg-1:hover #calendar #b-square-5 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black 0.2s ease 0.4s; }
  .animate .svg-1:hover #bulb-ray-1 {
    opacity: 1;
    transform-box: fill-box;
    animation: ray-top 0.6s ease both; }
  .animate .svg-1:hover #bulb-ray-2 {
    opacity: 1;
    transform-box: fill-box;
    animation: ray-diag 0.6s ease both; }
  .animate .svg-1:hover #bulb-ray-3 {
    opacity: 1;
    transform-box: fill-box;
    animation: ray-left 0.6s ease both; }
  .animate .svg-1:hover #jigsaw-red {
    transform-box: fill-box;
    transform-origin: top left;
    transform: rotate(0);
    transform: rotate(21.5deg) translateX(23px);
    transition: 0.6s; } }


    /* Mobile */
@media (max-width: 767px) {
  .animate .svg-1 #calendar #b-square-1 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black-m 2.2s ease 1s infinite; }
  .animate .svg-1 #calendar #b-square-2 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black-m 2.2s ease 1.1s infinite; }
  .animate .svg-1 #calendar #b-square-3 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black-m 2.2s ease 1.2s infinite; }
  .animate .svg-1 #calendar #b-square-4 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black-m 2.2s ease 1.3s infinite; }
  .animate .svg-1 #calendar #b-square-5 {
    transform-origin: center;
    transform-box: fill-box;
    animation: bs-black-m 2.2s ease 1.4s infinite; }
  .animate .svg-1 #bulb-ray-1 {
    opacity: 0;
    transition: 0.2s;
    transform-box: fill-box;
    animation: ray-top-m 2.2s 0.8s ease both infinite; }
  .animate .svg-1 #bulb-ray-2 {
    opacity: 0;
    transition: 0.2s;
    transform-box: fill-box;
    animation: ray-diag-m 2.2s 0.8s ease both infinite; }
  .animate .svg-1 #bulb-ray-3 {
    opacity: 0;
    transition: 0.2s;
    transform-box: fill-box;
    animation: ray-left-m 2.2s 0.8s ease both infinite; }
  .animate .svg-1 #jigsaw-red {
    transform-box: fill-box;
    transform-origin: top left;
    animation: insert-red-m 2.2s ease both infinite; } }

.anim-once #calendar #b-square-1 {
  transform-origin: center;
  transform-box: fill-box;
  animation: bs-black-m 2.2s ease 1.3s; }
.anim-once #calendar #b-square-2 {
  transform-origin: center;
  transform-box: fill-box;
  animation: bs-black-m 2.2s ease 1.4s; }
.anim-once #calendar #b-square-3 {
  transform-origin: center;
  transform-box: fill-box;
  animation: bs-black-m 2.2s ease 1.5s; }
.anim-once #calendar #b-square-4 {
  transform-origin: center;
  transform-box: fill-box;
  animation: bs-black-m 2.2s ease 1.6s; }
.anim-once #calendar #b-square-5 {
  transform-origin: center;
  transform-box: fill-box;
  animation: bs-black-m 2.2s ease 1.7s; }
.anim-once #bulb-ray-1 {
  opacity: 0;
  transition: 0.2s;
  transform-box: fill-box;
  animation: ray-top-m 2.2s 0.8s ease both; }
.anim-once #bulb-ray-2 {
  opacity: 0;
  transition: 0.2s;
  transform-box: fill-box;
  animation: ray-diag-m 2.2s 0.8s ease both; }
.anim-once #bulb-ray-3 {
  opacity: 0;
  transition: 0.2s;
  transform-box: fill-box;
  animation: ray-left-m 2.2s 0.8s ease both; }
.anim-once #jigsaw-red {
  transform-box: fill-box;
  transform-origin: top left;
  animation: insert-red-m 2.2s ease both; }

.animate #plane {
    transform-origin: 50% 80%;
    transform-box: fill-box;
    transform: rotate(200deg);
    offset-path: path("M710.27 451.165C696.52 430.865 679.71 392.865 721.42 366.125C780.89 328.005 880 236.515 721.42 151.125C562.84 65.7346 698.55 -30.3354 765.64 10.8346C832.73 52.0046 754.97 210.585 570.46 85.5546C414.94 -19.8354 293 42.6846 258.53 64.9346");
    animation: plane-move 3s ease forwards; }
  .animate .path {
    stroke-dasharray: 606;
    stroke-dashoffset: 0;
    animation: plane-path 3s ease backwards; }

.img-thumbnail {
  transition: .2s;
}

.img-thumbnail:hover {
  transition: 0.2s;
  padding: 0;
  border: 0;
  -webkit-box-shadow: 0px 0px 50px 50px rgba(0,0,0,0.2);
  box-shadow: 0px 0px 0px 8px rgba(0,0,0,0.10) !important;
}

div.bg-white {
  overflow: hidden;
}

@keyframes insert-red-m {
  0%, 25% {
    transform: rotate(0); }
  50% {
    transform: rotate(21.5deg) translateX(23px); }
  55% {
    transform: rotate(21.5deg) translateX(23px); }
  100% {
    transform: translateX(0) rotate(0deg); } }
@keyframes bs-black-m {
  0% {
    transform: scale(0); }
  10%, 100% {
    transform: scale(1); } }
@keyframes bs-black {
  0% {
    transform: scale(0); }
  100% {
    transform: scale(1); } }
@keyframes ray-top-m {
  0% {
    opacity: 1;
    transform-origin: bottom center;
    transform: scale(0); }
  10% {
    opacity: 1;
    transform-origin: bottom center;
    transform: scale(1); }
  90% {
    transform-origin: top center;
    transform: scale(1  ); }
  100% {
    transform-origin: top center;
    transform: scale(0); } }
@keyframes ray-diag-m {
  0% {
    opacity: 1;
    transform-origin: bottom right;
    transform: scale(0); }
  10% {
    opacity: 1;
    transform-origin: bottom right;
    transform: scale(1); }
  90% {
    transform-origin: top left;
    transform: scale(1  ); }
  100% {
    transform-origin: top left;
    transform: scale(0); } }
@keyframes ray-left-m {
  0% {
    opacity: 1;
    transform-origin: right center;
    transform: scale(0); }
  10% {
    opacity: 1;
    transform-origin: right center;
    transform: scale(1); }
  90% {
    transform-origin: left center;
    transform: scale(1  ); }
  100% {
    transform-origin: left center;
    transform: scale(0); } }


@keyframes ray-top {
  0% {
    transform-origin: bottom center;
    transform: scale(1); }
  25% {
    transform-origin: top center;
    transform: scale(1); }
  50% {
    transform-origin: top center;
    transform: scale(0); }
  75% {
    transform-origin: bottom center;
    transform: scale(0); }
  100% {
    transform-origin: bottom center;
    transform: scale(1); } }
@keyframes ray-diag {
  0% {
    transform-origin: bottom right;
    transform: scale(1); }
  25% {
    transform-origin: top left;
    transform: scale(1); }
  50% {
    transform-origin: top left;
    transform: scale(0); }
  75% {
    transform-origin: bottom right;
    transform: scale(0); }
  100% {
    transform-origin: bottom right;
    transform: scale(1); } }
@keyframes ray-left {
  0% {
    transform-origin: right center;
    transform: scale(1); }
  25% {
    transform-origin: right center;
    transform: scale(1); }
  50% {
    transform-origin: left center;
    transform: scale(0); }
  75% {
    transform-origin: right center;
    transform: scale(0); }
  100% {
    transform-origin: right center;
    transform: scale(1); } }
@keyframes slide-top {
  0% {
    transform: translateY(0); }
  100% {
    transform: translateY(-100px); } }

  @keyframes plane-move {
    0% {
      offset-distance: 0%; }
    100% {
      offset-distance: 100%; } }
  @keyframes plane-path {
    from {
      stroke-dashoffset: 1312.1486816406; }
    to {
      stroke-dashoffset: 0; } }

@keyframes blinkingText {
  0% {
    opacity: 1; }
  100% {
    opacity: 0; } }

/*# sourceMappingURL=index.css.map */

